--- a/src/content/experiments/book/book.mdx
+++ b/src/content/experiments/book/book.mdx
@@ -4,6 +4,9 @@ description: "test"
 image:
   url: "https://docs.astro.build/assets/rose.webp"
   alt: "The Astro logo on a dark background with a pink glow."
+tags:
+  - CSS
 ---
+import Book from '@/components/experiments/book/Book.astro';
 
-# Content
+<Book />
