--- a/src/content/experiments/book/book.mdx
+++ b/src/content/experiments/book/book.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Test"
+slug: book
+title: "CSS Book"
 description: "test"
 image:
-  url: "https://docs.astro.build/assets/rose.webp"
-  alt: "The Astro logo on a dark background with a pink glow."
+  url: "/test.webp"
+  alt: "test"
 tags:
   - CSS
 ---
-import Book from '@/components/experiments/book/Book.astro';
 
-<Book />
+Content
