--- a/src/content/experiments/book/book.mdx
+++ b/src/content/experiments/book/book.mdx
@@ -2,6 +2,9 @@
 slug: book
 title: "Scroll-driven 3D CSS book animation"
 description: "test"
+tags:
+  - CSS
+  - 3D
 ---
 
 import Book from "./components/Book.astro";
