Change dark theme colors

--- a/src/content/projects/comics-zone/comics-zone.mdx
+++ b/src/content/projects/comics-zone/comics-zone.mdx
@@ -13,3 +13,5 @@ import poster from './images/poster.webp';
 <Image src={poster} alt="Game poster" class="pixelated w-full" />
 
 An attempt to create HTML5 spin-off for the great SEGA game called Comix Zone
+
+### Work in progress
