--- a/src/content/projects/comics-zone/comics-zone.mdx
+++ b/src/content/projects/comics-zone/comics-zone.mdx
@@ -2,15 +2,13 @@
 slug: comics-zone
 title: "Comics Zone: Multiverse"
 description: "An attempt to create HTML5 spin-off for the great SEGA game called Comix Zone"
+repoLink: https://github.com/mdmen/Comics-Zone-Multiverse
+demoLink: https://github.com/mdmen/Comics-Zone-Multiverse
 tags:
   - Game
   - 2D
   - PixiJS
 ---
-import { Image } from 'astro:assets';
-import poster from './images/poster.webp';
-
-<Image src={poster} alt="Game poster" class="pixelated w-full" />
 
 An attempt to create HTML5 spin-off for the great SEGA game called Comix Zone
 
