Add 3D CSS blocky characters experiment

--- a/src/content/experiments/book/book.mdx
+++ b/src/content/experiments/book/book.mdx
@@ -1,7 +1,9 @@
 ---
 slug: book
 title: "Scroll-driven 3D CSS book animation"
+datePublish: 2025-04-26
 description: "An example of using CSS scroll-driven animations with CSS custom properties"
+codepen: jEELzeN
 tags:
   - CSS
   - 3D
