Fix images preloading

--- a/src/content/experiments/characters/characters.mdx
+++ b/src/content/experiments/characters/characters.mdx
@@ -1,8 +1,9 @@
 ---
 slug: characters
-title: "3D CSS blocky characters"
+title: "3D CSS characters animation"
 datePublish: 2025-04-30
 description: "Controlled CSS characters with Kenney's texture pack"
+codepen: RNNjOmE
 tags:
   - CSS
   - 3D
