Add post preview

--- a/src/content/experiments/book/book.mdx
+++ b/src/content/experiments/book/book.mdx
@@ -4,6 +4,7 @@ title: "Scroll-driven 3D CSS book animation"
 datePublish: 2025-04-26
 description: "An example of using CSS scroll-driven animations with CSS custom properties"
 codepen: jEELzeN
+preview: "./images/preview.webp"
 tags:
   - CSS
   - 3D
