--- a/src/content/experiments/characters/characters.mdx
+++ b/src/content/experiments/characters/characters.mdx
@@ -4,6 +4,7 @@ title: "3D CSS characters animation"
 datePublish: 2025-04-30
 description: "Controlled CSS characters with Kenney's texture pack"
 codepen: RNNjOmE
+preview: "./images/preview.webp"
 tags:
   - CSS
   - 3D
